# pytest-jupyter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  setup.py
.github/workflows/: downstream.yml  test.yml
docs/: conf.py  index.md
docs/plugins/: jupyter_core.md  jupyter_server.md
pytest_jupyter/: __init__.py  _version.py  echo_kernel.py  jupyter_client.py  jupyter_core.py  jupyter_server.py  pytest_tornasync.py  utils.py
tests/: conftest.py  test_jupyter_client.py  test_jupyter_core.py  test_jupyter_server.py
